name:                dup-record-fields
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/andreyk0/dup-record-fields#readme
license:             BSD3
license-file:        LICENSE
author:              Andrey Kartashov
maintainer:          andrey.kartashov@gmail.com
copyright:           2018 Andrey Kartashov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dup-record-fields
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       X Y Z Types
  default-language:    Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , generic-lens
                      , microlens-platform
